--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -19,7 +19,7 @@ jobs:
           echo "Latest chikvdf is: $LATEST_CHIKVDF"
           mkdir chikvdfc
           cd chikvdfc || exit 1
-          wget https://github.com/Chik-Network/chikvdf/releases/download/$LATEST_CHIKVDF/chikvdfc-ubuntu-intel.zip
+          wget https://github.com/Chik-Network/chikvdf/releases/download/1.1.10rc1/chikvdfc-ubuntu-intel.zip
           unzip chikvdfc-ubuntu-intel.zip
           echo "CGO_CFLAGS=-I${GITHUB_WORKSPACE}/chikvdfc/chikvdfc-ubuntu-intel" >> "$GITHUB_ENV"
           echo "CGO_LDFLAGS=-L${GITHUB_WORKSPACE}/chikvdfc/chikvdfc-ubuntu-intel/static" >> "$GITHUB_ENV"
